--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "astro": "^5.6.2"
+  },
+  "devDependencies": {
+    "astro-themes": "^0.2.6"
   }
 }
